# app/Models/Pest.php
@@ -1,0 +1,15 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class Pest extends Model
+{
+    protected $primaryKey = 'id';
+    protected $guarded = [];
+    public function disease()
+    {
+        return $this->belongsTo(Disease::class, 'id_disease', 'id_disease');
+    }
+}
